crates/toml_edit/tests/snapshots/invalid/ext/string/no-close-recovery-03.stderr
TOML parse error at line 11, column 30
   |
11 | crate3."path = "../somewhere"
   |                              ^
key with no value, expected `=`
